scrollbar fixed

--- a/style/header.css
+++ b/style/header.css
@@ -9,40 +9,46 @@ html {
   scroll-padding-top: 120px;
   overflow-x: hidden !important;
 }
+::-webkit-scrollbar{
+  width: 5px;
+}
+::-webkit-scrollbar-track{
+  background-color: #0a1828;
+}
+::-webkit-scrollbar-thumb{
+  background-color: #bfa181;
+  border-radius: 10px;
+}
+nav {
+  background-color: #0a1828 !important;
 
-  nav{
-    background-color: #0a1828 !important;
-    
-    li {
-      color: #178582 !important;
-      padding-left: 20px;
+  li {
+    color: #178582 !important;
+    padding-left: 20px;
+  }
+  a {
+    color: #178582 !important;
+    font-size: 18px !important;
+    font-weight: 600;
+    border-bottom: 2px solid transparent;
+    transition: 0.5s ease-in !important;
+  }
+  a:hover {
+    border-bottom: 2px solid #bfa181 !important;
+  }
+  form {
+    button {
+      margin-left: 20px;
+      background-color: transparent;
+      border: 2px solid #178582 !important;
+      color: azure;
+      padding: 10px 36px;
+      border-radius: 5px;
+      font-weight: 500;
+      transition: 0.5s ease-in all;
     }
-    a {
-      color: #178582 !important;
-      font-size: 18px !important;
-      font-weight: 600;
-      border-bottom: 2px solid transparent;
-      transition: 0.5s ease-in !important;
-    }
-    a:hover {
-      border-bottom: 2px solid #bfa181 !important;
-    }
-    form {
-      button {
-        margin-left: 20px;
-        background-color: transparent;
-        border: 2px solid #178582 !important;
-        color: azure;
-        padding: 10px 36px;
-        border-radius: 5px;
-        font-weight: 500;
-        transition: 0.5s ease-in all;
-      }
-      button:hover {
-        background-color: #178582;
-      }
+    button:hover {
+      background-color: #178582;
     }
   }
-
-
-
+}
